first section completed

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .main {
-	width: 100vw;
+	width: 100%;
 	background-color: white;
 	display: flex;
 	padding: 100px;
@@ -18,6 +18,9 @@ body {
 
 .main::-webkit-scrollbar {
 	width: 10px;
+}
+.second-section {
+	width: 100%;
 }
 .left-section {
 	width: 50%;
@@ -153,12 +156,12 @@ body {
 	width: 50px;
 }
 .first-main {
-	padding: 50px;
+	padding: 100px;
 }
 
 .first-section {
 	width: 100%;
-	background-color: red;
+	background-color: black;
 }
 .navbar {
 	width: 100%;
@@ -181,4 +184,80 @@ body {
 }
 .first-main {
 	padding: 50px;
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 120px;
+}
+.content-wrapper {
+	padding: 0px 175px;
+	display: flex;
+	flex-direction: column;
+	gap: 70px;
+}
+.heading-container {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+.heading {
+	font-size: 70px;
+	font-weight: 200;
+	color: white;
+}
+.bold {
+	font-weight: 800;
+}
+
+.info-para {
+	width: 40%;
+	font-size: 16px;
+	color: rgb(73, 70, 70);
+}
+.worksWrapper {
+	width: 50%;
+	display: flex;
+	align-items: center;
+}
+.wedo {
+	height: 70px;
+	background-color: rgb(255, 152, 0);
+	width: 50%;
+	border-radius: 35px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0px 10px;
+}
+.inner-text {
+	color: black;
+	padding-left: 30px;
+	text-transform: uppercase;
+	font-size: 15px;
+}
+.right-arrow-circle {
+	width: 40px;
+	height: 40px;
+	background-color: black;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.dull {
+	background-color: rgb(24, 23, 23);
+}
+.view-works-wrapper {
+	height: 50px;
+	width: 50%;
+	border-radius: 35px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0px 10px;
+}
+.white {
+	color: white;
+	font-weight: 100;
+}
+.right-arrow-circle {
 }
