--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,7 @@
 	padding: 0px;
 	box-sizing: border-box;
 }
-body {
-	scrollbar-width: thin;
-}
+
 .main {
 	width: 100vw;
 	background-color: white;
@@ -125,4 +123,25 @@ body {
 .photo img {
 	width: 100%;
 	height: 100%;
+}
+.fourthsection {
+	width: 100vw;
+	background-color: white;
+}
+.lesftside {
+	width: 50%;
+	background-color: aqua;
+	display: flex;
+	flex-direction: column;
+}
+.meet {
+	width: 100%;
+	background-color: white;
+}
+.information {
+	width: 100%;
+	background-color: antiquewhite;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
