--- a/styles.css
+++ b/styles.css
@@ -207,10 +207,6 @@
 	height: 100%;
 }
 
-.first-section {
-	width: 100%;
-	background-color: red;
-}
 .navbar {
 	width: 100%;
 	display: flex;
@@ -333,4 +329,124 @@
 .white {
 	color: white;
 	font-weight: 100;
+}
+.sixth-section {
+	width: 100%;
+	background-color: white;
+	padding: 150px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+.popular {
+	width: 100%;
+	/* background-color: aqua; */
+	display: flex;
+	justify-content: space-between;
+}
+.popular h1 {
+	font-size: 30px;
+	color: black;
+}
+.viewall {
+	height: 70px;
+	/* background-color: rgb(255, 152, 0); */
+	width: 50%;
+	border-radius: 35px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	padding: 0px 10px;
+	gap: 20px;
+}
+.viewall-circle {
+	width: 40px;
+	height: 40px;
+	background-color: rgba(128, 128, 128, 0.705);
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.middle-bg {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.leftbox {
+	width: 48%;
+	/* background-color: aqua; */
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+.penclis {
+	width: 100%;
+	height: 200px;
+}
+.pencils img {
+	width: 100%;
+	height: 100%;
+}
+.technology {
+	width: 100%;
+	height: 10%;
+	/* background-color: burlywood; */
+	display: flex;
+	gap: 15px;
+	align-items: center;
+}
+.technology p {
+	font-size: 12px;
+	color: chocolate;
+}
+.technology span {
+	font-size: 13px;
+	color: grey;
+}
+.become {
+	width: 100%;
+	height: 150px;
+	padding-right: 90px;
+	gap: 30px;
+	display: flex;
+	flex-direction: column;
+}
+.become h1 {
+	font-size: 20px;
+	color: black;
+	padding-right: 100px;
+}
+.become p {
+	font-size: 13px;
+	color: grey;
+}
+.rightbox {
+	width: 48%;
+	/* background-color: aqua; */
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+.arrow {
+	width: 100%;
+	/* background-color: brown; */
+	display: flex;
+	gap: 20px;
+	display: flex;
+	align-items: center;
+}
+.arrow span {
+	font-size: 14px;
+	color: black;
+}
+.greycircle {
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: rgba(128, 128, 128, 0.705);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
